; ModuleID = '/home/carl/AnghaBench/obs-studio/libobs-opengl/extr_gl-subsystem.c_get_tex_dimensions.c'
source_filename = "/home/carl/AnghaBench/obs-studio/libobs-opengl/extr_gl-subsystem.c_get_tex_dimensions.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i64 }
%struct.gs_texture_2d = type { i32, i32 }
%struct.gs_texture_cube = type { i32 }

@GS_TEXTURE_2D = common dso_local global i64 0, align 8
@GS_TEXTURE_CUBE = common dso_local global i64 0, align 8
@LOG_ERROR = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [30 x i8] c"Texture must be 2D or cubemap\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_3__*, i32*, i32*)* @get_tex_dimensions to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @get_tex_dimensions(%struct.TYPE_3__* %0, i32* %1, i32* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.TYPE_3__*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca %struct.gs_texture_2d*, align 8
  %9 = alloca %struct.gs_texture_cube*, align 8
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %5, align 8
  store i32* %1, i32** %6, align 8
  store i32* %2, i32** %7, align 8
  %10 = load %struct.TYPE_3__*, %struct.TYPE_3__** %5, align 8
  %11 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %10, i32 0, i32 0
  %12 = load i64, i64* %11, align 8
  %13 = load i64, i64* @GS_TEXTURE_2D, align 8
  %14 = icmp eq i64 %12, %13
  br i1 %14, label %15, label %26

15:                                               ; preds = %3
  %16 = load %struct.TYPE_3__*, %struct.TYPE_3__** %5, align 8
  %17 = bitcast %struct.TYPE_3__* %16 to %struct.gs_texture_2d*
  store %struct.gs_texture_2d* %17, %struct.gs_texture_2d** %8, align 8
  %18 = load %struct.gs_texture_2d*, %struct.gs_texture_2d** %8, align 8
  %19 = getelementptr inbounds %struct.gs_texture_2d, %struct.gs_texture_2d* %18, i32 0, i32 1
  %20 = load i32, i32* %19, align 4
  %21 = load i32*, i32** %6, align 8
  store i32 %20, i32* %21, align 4
  %22 = load %struct.gs_texture_2d*, %struct.gs_texture_2d** %8, align 8
  %23 = getelementptr inbounds %struct.gs_texture_2d, %struct.gs_texture_2d* %22, i32 0, i32 0
  %24 = load i32, i32* %23, align 4
  %25 = load i32*, i32** %7, align 8
  store i32 %24, i32* %25, align 4
  store i32 1, i32* %4, align 4
  br label %47

26:                                               ; preds = %3
  %27 = load %struct.TYPE_3__*, %struct.TYPE_3__** %5, align 8
  %28 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %27, i32 0, i32 0
  %29 = load i64, i64* %28, align 8
  %30 = load i64, i64* @GS_TEXTURE_CUBE, align 8
  %31 = icmp eq i64 %29, %30
  br i1 %31, label %32, label %43

32:                                               ; preds = %26
  %33 = load %struct.TYPE_3__*, %struct.TYPE_3__** %5, align 8
  %34 = bitcast %struct.TYPE_3__* %33 to %struct.gs_texture_cube*
  store %struct.gs_texture_cube* %34, %struct.gs_texture_cube** %9, align 8
  %35 = load %struct.gs_texture_cube*, %struct.gs_texture_cube** %9, align 8
  %36 = getelementptr inbounds %struct.gs_texture_cube, %struct.gs_texture_cube* %35, i32 0, i32 0
  %37 = load i32, i32* %36, align 4
  %38 = load i32*, i32** %6, align 8
  store i32 %37, i32* %38, align 4
  %39 = load %struct.gs_texture_cube*, %struct.gs_texture_cube** %9, align 8
  %40 = getelementptr inbounds %struct.gs_texture_cube, %struct.gs_texture_cube* %39, i32 0, i32 0
  %41 = load i32, i32* %40, align 4
  %42 = load i32*, i32** %7, align 8
  store i32 %41, i32* %42, align 4
  store i32 1, i32* %4, align 4
  br label %47

43:                                               ; preds = %26
  br label %44

44:                                               ; preds = %43
  %45 = load i32, i32* @LOG_ERROR, align 4
  %46 = call i32 @blog(i32 %45, i8* getelementptr inbounds ([30 x i8], [30 x i8]* @.str, i64 0, i64 0))
  store i32 0, i32* %4, align 4
  br label %47

47:                                               ; preds = %44, %32, %15
  %48 = load i32, i32* %4, align 4
  ret i32 %48
}

declare dso_local i32 @blog(i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
